# ai-tour-tokyo-2026

./: .dockerignore  .env.sample  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README-private-isu.md  README.md  app.py  compose.yml  manual.md  openapi.yaml  pyproject.toml
.github/agents/: technical-writer.md
.github/workflows/: bicep.yml
infra/: alerts.bicep  apimanagement.bicep  containerapps.bicep  functions.bicep  main.bicep  main.bicepparam  main.json  monitoring.bicep  network.bicep  postgresql.bicep  seed-functions.bicep
mcp-server/: .gitignore  function_app.py
private-isu-master/webapp/node/: package-lock.json
provisioning/: README.md  hosts
provisioning/seed/: demo_posts_text.json  demo_users.json
script/: azurite  backup  bootstrap  deploy-func  deploy-infra  grant-postgres-mi-role  grant-storage-role  launch-vm  launch-vm.cfg  list-resource-groups  mcp-server  migrate_images_to_blob.py  restore  seed  seed_impl.py  server  test-apim  upload-to-github
seed-functions/: api_seed_runner.py  function_app.py  requirements.txt  seed_runner.py
sql/: .gitignore  bootstrap_check_database_exists.sql  bootstrap_check_sequence_usage_privilege.sql  bootstrap_check_table_exists.sql  bootstrap_check_table_privilege.sql  bootstrap_create_database.sql  bootstrap_create_role.sql  bootstrap_create_table.sql  bootstrap_grant_connect_database.sql  bootstrap_grant_local_privileges.sql  bootstrap_list_public_sequences.sql
templates/: banned.html  header.html  login.html  post.html  register.html  user.html
tests/: test_api.py  test_blob_compat.py
(+15 files in other folders)
