[project]
name = "private-isu"
version = "0.1.0"
description = "private-isu webapp implementation for Python"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "click==8.3.1",
    "flask>=3.1.3",
    "flask-session[memcached]>=0.8.0",
    "gunicorn>=25.1.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "psycopg2-binary>=2.9.10",
    "msgspec==0.20.0",
    "packaging==26.0",
    "pymemcache>=4.0.0",
    "werkzeug==3.1.6",
    "azure-storage-blob>=12.28.0",
    "azure-identity>=1.25.3",
    "python-dotenv>=1.1.1",
]
